Fix "not serializable" issues for correlation